static/style.css
#jsddm {
        margin: 0;
        padding: 0;
}

#jsddm li {
	float: left;
	list-style: none;
	font: 12px Tahoma, Arial;
}

#jsddm li a {
	display: block;
	background: #324143;
	padding: 5px 12px;
	text-decoration: none;
	border-right: 1px solid white;
	width: 70px;
	color: #EAFFED;
	white-space: nowrap;
}

#jsddm li a:hover { background: #24313C }

#jsddm li ul {
	margin: 0;
	padding: 0;
	position: absolute;
	visibility: hidden;
	border-top: 1px solid white;
	z-index: 999;
}

#jsddm li ul li {
	float: none;
	display: inline;
}

#jsddm li ul li a {
	width: auto;
	background: #A9C251;
	color: #24313C;
}

#jsddm li ul li a:hover { background: #8EA344 }

table 
{
	border-collapse:collapse;
	height=100%;
}

table, th, td 
{
	border: 1px solid black;
	padding-left: 1em;
	padding-right: 1em;
}

tr.header
{
	background-color:#5882FA;
}

tr.odd
{
	background-color:#FFFFFF;
}

tr.even
{
	background-color:#D8D8D8;
}

td.winner
{
}


td.soft
{
	/*color: #848484;*/
	color: #6E6E6E;
	font-style:italic;
}

td.strong
{
	font-weight:bold;
}

input.score
{
	margin-left: 1em;
}

a.update
{
	text-decoration:none;
	color: #0000FF;
}

h1 {
	margin-top: 0px;
	margin-bottom: 0px;
}

body {
	background-color: #cccccc;

}

#nav {
	height: 40px;
}

#wrap {
	width: 90%;
	margin: 5px;
}

/*
#schedule 
{
	float:left;
	width: 60%;
	margin-bottom: 20px;
}

#standings
{
	float: right;
	width: 40%;
}
*/

